Refine tribute defaults and command messaging